# octomap_study

./: CMakeLists.txt  README.md
data/: map.bt
src/: CMakeLists.txt  joinmap.cpp  pcd2ColorOctomap.cpp  pcd2octomap.cpp
